<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_aboutus"
            android:title="@string/manu_aboutus" />
        <item
            android:id="@+id/nav_share"
            android:title="@string/manu_share" />
        <item
            android:id="@+id/nav_rules"
            android:title="@string/manu_rules" />
        <item
            android:id="@+id/nav_language"
            android:title="@string/manu_language" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/manu_logout" />


    </group>
</menu>