<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mydearmechanic.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mydearmechanic.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mydearmechanic.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.mydearmechanic.ui.aboutusFragment"
        android:label="@string/manu_aboutus"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
    android:id="@+id/nav_share"
    android:name="com.mydearmechanic.ui.sharethisappFragment"
    android:label="@string/manu_share"
    tools:layout="@layout/fragment_sharethisapp" />
    <fragment
        android:id="@+id/nav_rules"
        android:name="com.mydearmechanic.ui.rulesFragment"
        android:label="@string/manu_rules"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/nav_language"
        android:name="com.mydearmechanic.ui.languageFragment"
        android:label="@string/manu_language"
        tools:layout="@layout/fragment_language" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.mydearmechanic.ui.logoutFragment"
        android:label="@string/manu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>